add paragraph about modularity docs to server download section

--- a/getfedora.org/data/content/server/download/index.html
+++ b/getfedora.org/data/content/server/download/index.html
@@ -42,6 +42,7 @@
           <p>${_('The Fedora Server installation image allows you to make media for your computer that boots to the installer to directly install Fedora Server on to your hard drive')}</p>
           <p>${_('To use this image, you need a drive that can create or "burn" DVDs, or a USB flash drive at least as big as the image.')}</p>
           <xi:include href="../../../templates/generic/docs-links.html" />
+          <p>${Markup(_('If you would like to try out the new modular features of Fedora Server, please visit the &lt;a href="%(modules)s"&gt;Using Modules&lt;/a&gt; section of the Modularity Documentation. If you would like more information about Modularity in general, please see the &lt;a href="%(website)s"&gt;website on pagure&lt;/a&gt;.') % {'modules': 'https://docs.fedoraproject.org/fedora-project/subprojects/fesco/en-US/Using_Modules.html', 'website': 'https://docs.pagure.org/modularity/'})}</p>
           <xi:include href="../../../templates/generic/other-media-sources.html" />
           <hr />
           <xi:include href="../../../templates/export-regulations.html" />
