replace all Docker paths and checksum files with Container

--- a/getfedora.org/data/content/atomic/download/download-cloud-splash.html
+++ b/getfedora.org/data/content/atomic/download/download-cloud-splash.html
@@ -5,7 +5,7 @@
   xmlns:xi="http://www.w3.org/2001/XInclude">
   <xi:include href="../../../templates/master.html" />
   <head>
-    <title>${_('Download Fedora Cloud')}</title>
+    <title>${_('Download Fedora Atomic Host')}</title>
   </head>
   <body id="cloud">
 
