--- a/alt.fedoraproject.org/data/content/alt/index.html
+++ b/alt.fedoraproject.org/data/content/alt/index.html
@@ -149,13 +149,13 @@
             <img src="/static/images/docker.png" />
             </div>
             <div class="col-md-4">
-            <h3>${_('Fedora Docker')}</h3>
+            <h3>${_('Fedora Container')}</h3>
             </div>
             <div class="col-md-3">
-            <p>${Markup(_('%sMB Docker image')) % global_variables.iso_size['aarch64_docker']}</p>
+            <p>${Markup(_('%sMB Container image')) % global_variables.iso_size['aarch64_Container']}</p>
             </div>
             <div class="col-md-4">
-            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Docker/aarch64/images/Fedora-Docker-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.aarch64.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Container/aarch64/images/Fedora-Container-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.aarch64.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
             </div>
           </div>
         </div>
@@ -254,8 +254,8 @@
           <img src="/static/images/docker.png" />
           </div>
           <div class="col-xs-9">
-          <h3>${_('Fedora Docker')}</h3>
-          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Docker/aarch64/images/Fedora-Docker-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.aarch64.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+          <h3>${_('Fedora Container')}</h3>
+          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Container/aarch64/images/Fedora-Container-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.aarch64.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
       </div>
@@ -369,10 +369,10 @@
           <img src="/static/images/docker.png" />
           </div>
           <div class="col-sm-5">
-          <h3>${_('Fedora Docker')}</h3>
+          <h3>${_('Fedora Container')}</h3>
           </div>
           <div class="col-sm-4">
-          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Docker/aarch64/images/Fedora-Docker-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.aarch64.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Container/aarch64/images/Fedora-Container-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_aarch64']}.aarch64.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
       </div>
@@ -515,13 +515,13 @@
             <img src="/static/images/docker.png" />
             </div>
             <div class="col-md-4">
-            <h3>${_('Fedora Docker')}</h3>
+            <h3>${_('Fedora Container')}</h3>
             </div>
             <div class="col-md-3">
-            <p>${Markup(_('%sMB Docker image')) % global_variables.iso_size['ppc64_docker']}</p>
+            <p>${Markup(_('%sMB Container image')) % global_variables.iso_size['ppc64_Container']}</p>
             </div>
             <div class="col-md-4">
-            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Docker/ppc64/images/Fedora-Docker-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.ppc64.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Container/ppc64/images/Fedora-Container-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.ppc64.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
             </div>
           </div>
           -->
@@ -621,13 +621,13 @@
             <img src="/static/images/docker.png" />
             </div>
             <div class="col-md-4">
-            <h3>${_('Fedora Docker')}</h3>
+            <h3>${_('Fedora Container')}</h3>
             </div>
             <div class="col-md-3">
-            <p>${Markup(_('%sMB Docker image')) % global_variables.iso_size['ppc64le_docker']}</p>
+            <p>${Markup(_('%sMB Container image')) % global_variables.iso_size['ppc64le_Container']}</p>
             </div>
             <div class="col-md-4">
-            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Docker/ppc64le/images/Fedora-Docker-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.ppc64le.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+            <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Container/ppc64le/images/Fedora-Container-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.ppc64le.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
             </div>
           </div>
         </div>
@@ -708,8 +708,8 @@
           <img src="/static/images/docker.png" />
           </div>
           <div class="col-xs-9">
-          <h3>${_('Fedora Docker')}</h3>
-          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Docker/ppc64/images/Fedora-Docker-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.ppc64.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+          <h3>${_('Fedora Container')}</h3>
+          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Container/ppc64/images/Fedora-Container-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.ppc64.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
         -->
@@ -779,8 +779,8 @@
           <img src="/static/images/docker.png" />
           </div>
           <div class="col-xs-9">
-          <h3>${_('Fedora Docker')}</h3>
-          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Docker/ppc64le/images/Fedora-Docker-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.ppc64le.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+          <h3>${_('Fedora Container')}</h3>
+          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Container/ppc64le/images/Fedora-Container-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.ppc64le.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
       </div>
@@ -872,10 +872,10 @@
           <img src="/static/images/docker.png" />
           </div>
           <div class="col-sm-5">
-          <h3>${_('Fedora Docker')}</h3>
+          <h3>${_('Fedora Container')}</h3>
           </div>
           <div class="col-sm-4">
-          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Docker/ppc64/images/Fedora-Docker-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.ppc64.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Container/ppc64/images/Fedora-Container-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.ppc64.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
         -->
@@ -957,10 +957,10 @@
           <img src="/static/images/docker.png" />
           </div>
           <div class="col-sm-5">
-          <h3>${_('Fedora Docker')}</h3>
+          <h3>${_('Fedora Container')}</h3>
           </div>
           <div class="col-sm-4">
-          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Docker/ppc64le/images/Fedora-Docker-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.ppc64le.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+          <p class="download"><a href="${global_variables.path['download_arch']}/${global_variables.release['curr_alt_id']}/Container/ppc64le/images/Fedora-Container-Base-${global_variables.release['curr_alt_id']}-${global_variables.release['RC_gold_ppc64']}.ppc64le.tar.xz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
           </div>
         </div>
       </div>
