readd Python Classroom to arm.fpo

--- a/arm.fedoraproject.org/data/content/index.html
+++ b/arm.fedoraproject.org/data/content/index.html
@@ -428,7 +428,7 @@
     </div>
   </div>
 
-  <!-- ARM Labs
+  <!-- ARM Labs -->
   <div class="jumbotron main-head top-space visible-lg hidden-xs hidden-sm hidden-md">
     <div class="container using">
       <div class="row">
@@ -460,7 +460,7 @@
     </div>
   </div>
 
-  <!- ARM Labs mobile phone ->
+  <!-- ARM Labs mobile phone -->
   <div class="jumbotron main-head top-space visible-xs">
     <div class="container using">
       <div class="row">
@@ -487,7 +487,7 @@
     </div>
   </div>
 
-  <!- ARM Labs mobile tablets ->
+  <!-- ARM Labs mobile tablets -->
   <div class="jumbotron main-head top-space visible-sm-md hidden-xs hidden-lg">
     <div class="container using">
       <div class="row">
@@ -515,7 +515,6 @@
       </div>
     </div>
   </div>
--->
 
   <!-- Feature: ARM -->
   <div class="jumbotron product-feature bluebox">
