--- a/labs.fedoraproject.org/data/content/verify.html
+++ b/labs.fedoraproject.org/data/content/verify.html
@@ -35,10 +35,9 @@
         <div class="col-sm-4 col-xs-12">
           <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Labs-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-x86_64-CHECKSUM">${_('Validate 64-bit!')}</a>
         </div>
-<!--        <div class="col-sm-4 col-xs-12">
+        <div class="col-sm-4 col-xs-12">
           <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Labs-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-i386-CHECKSUM">${_('Validate 32-bit!')}</a>
         </div>
--->
     </div>
 
     <div class="row bottom-space">
