--- a/getfedora.org/data/content/workstation/download/index.html
+++ b/getfedora.org/data/content/workstation/download/index.html
@@ -144,8 +144,7 @@
         <div class="col-md-3 text-left col-md-offset-1">
           <h3>${_('Other Downloads')}</h3>
           <p><a class="ws-download-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Workstation/x86_64/iso/Fedora-Workstation-Live-x86_64-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${Markup(_('64-bit %sGB Live image')) % global_variables.iso_size['x86_64_workstation']}</a></p>
-<!--          <p><a class="ws-download-splash" href="${global_variables.path['download_arch']}/${global_variables.release['curr_id']}/Workstation/i386/iso/Fedora-Workstation-Live-i386-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${Markup(_('32-bit %sGB Live image')) % global_variables.iso_size['i386_workstation']}</a></p>
--->
+          <p><a class="ws-download-splash" href="${global_variables.path['download_arch']}/${global_variables.release['curr_id']}/Workstation/i386/iso/Fedora-Workstation-Live-i386-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso">${Markup(_('32-bit %sGB Live image')) % global_variables.iso_size['i386_workstation']}</a></p>
           <p>
           ${_('Netinstall Images:')}
           <ul>
@@ -189,7 +188,7 @@
               <p><i class="fa fa-fw fa-sm header-icon fa-book"></i><a href="//fedoraproject.org/wiki/Workstation/AtomicWorkstation">${_('Learn more')}</a></p>
             </div>
           </div>
-          
+
           <div class="top-margin bottom-margin"><h4>${_('Resources')}</h4></div>
           <p><i class="fa fa-fw fa-sm header-icon fa-globe"></i>${Markup(_('&lt;a href="%(fmagazine_url)s"&gt;&lt;strong&gt;Release Announcement&lt;/strong&gt;&lt;/a&gt;') % {'fmagazine_url': 'https://fedoramagazine.org/announcing-fedora-%s' % (global_variables.release['curr_id'])})}</p>
           <div class="pull-right bottom-step"><p>${_('Read the full Release Announcement on Fedora Magazine.')}</p></div>
