fix freeciv link in games spin

--- a/labs.fedoraproject.org/data/content/games/index.html
+++ b/labs.fedoraproject.org/data/content/games/index.html
@@ -91,7 +91,7 @@
 	      	<img src="${path}/static/images/games/freeciv.png" alt="Freeciv" />
           	<h4>${_('Freeciv')}</h4>
           	<p>${_('Freeciv is a Free and Open Source empire-building strategy game inspired by the history of human civilization.')}</p>
-          	<a href="https://play.freeciv.org/">${Markup(_('Learn More &gt;'))}</a>
+          	<a href="http://freeciv.org/">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
       </div>
