fix: Stay consistent in messaging when verifying an image

--- a/alt.fedoraproject.org/data/content/verify-prereleases.html
+++ b/alt.fedoraproject.org/data/content/verify-prereleases.html
@@ -148,7 +148,7 @@
             <pre class="command">$ sha256sum -c *-CHECKSUM</pre>
             <p>${Markup(_('If the output states that the file is valid, then it\'s ready to use!'))}</p>
 	    <h3 class="top-margin">${_('How do I verify my downloaded image on another operating system?')}</h3>
-	    <p><a href="//docs.fedoraproject.org/f26/install-guide/install/Preparing_for_Installation.html#sect-verifying-images">${_('Read these instructions to validate your image.')}</a></p>
+	    <p><a href="//docs.fedoraproject.org/f26/install-guide/install/Preparing_for_Installation.html#sect-verifying-images">${_('Read these instructions to verify your image.')}</a></p>
         </div>
     </div>
   </div>
