--- a/arm.fedoraproject.org/data/content/verify.html
+++ b/arm.fedoraproject.org/data/content/verify.html
@@ -35,25 +35,25 @@
         <div class="col-sm-4 col-xs-12 text-center">
           <h4 class="uppercase top-margin">${_('Server')}</h4>
           <div class="h-body text-center">
-            <a class="btn btn-default btn-topmargin btn-fix-verify" href="${path}/static/checksums/Fedora-Server-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Validate Server!')}</a>
+            <a class="btn btn-default btn-topmargin btn-fix-verify" href="${path}/static/checksums/Fedora-Server-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Verify Server!')}</a>
           </div>
           <div class="h-body text-center">
-            <a class="btn btn-default btn-topmargin btn-fix-verify" href="${path}/static/checksums/Fedora-Spins-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Validate Minimal!')}</a>
+            <a class="btn btn-default btn-topmargin btn-fix-verify" href="${path}/static/checksums/Fedora-Spins-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Verify Minimal!')}</a>
           </div>
         </div>
         <div class="col-sm-4 col-xs-12 text-center">
           <h4 class="uppercase top-margin">${_('Desktop')}</h4>
           <div class="h-body text-center">
-            <a class="btn btn-default btn-topmargin btn-fix-verify" href="${path}/static/checksums/Fedora-Workstation-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Validate Workstation!')}</a>
+            <a class="btn btn-default btn-topmargin btn-fix-verify" href="${path}/static/checksums/Fedora-Workstation-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Verify Workstation!')}</a>
           </div>
           <div class="h-body text-center">
-            <a class="btn btn-default btn-topmargin btn-fix-verify" href="${path}/static/checksums/Fedora-Spins-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Validate Spins!')}</a>
+            <a class="btn btn-default btn-topmargin btn-fix-verify" href="${path}/static/checksums/Fedora-Spins-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Verify Spins!')}</a>
           </div>
         </div>
         <div class="col-sm-4 col-xs-12 text-center">
           <h4 class="uppercase top-margin">${_('Labs')}</h4>
           <div class="h-body text-center">
-            <a class="btn btn-default btn-topmargin btn-fix-verify" href="${path}/static/checksums/Fedora-Labs-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Validate Labs!')}</a>
+            <a class="btn btn-default btn-topmargin btn-fix-verify" href="${path}/static/checksums/Fedora-Labs-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-armhfp-CHECKSUM">${_('Verify Labs!')}</a>
           </div>
         </div>
     </div>
@@ -77,7 +77,7 @@
             <pre class="command">$ sha256sum -c *-CHECKSUM</pre>
             <p>${Markup(_('If the output states that the file is valid, then it\'s ready to use!'))}</p>
 	    <h3 class="top-margin">${_('How do I verify my downloaded image on another operating system?')}</h3>
-	    <p><a href="//docs.fedoraproject.org/f26/install-guide/install/Preparing_for_Installation.html#sect-verifying-images">${_('Read these instructions to validate your image.')}</a></p>
+	    <p><a href="//docs.fedoraproject.org/f26/install-guide/install/Preparing_for_Installation.html#sect-verifying-images">${_('Read these instructions to verify your image.')}</a></p>
         </div>
     </div>
   </div>
