--- a/getfedora.org/data/content/atomic/download/download-cloud-splash.html
+++ b/getfedora.org/data/content/atomic/download/download-cloud-splash.html
@@ -49,7 +49,7 @@
           <p>${Markup(_('Once you have downloaded an image, verify it for security and integrity. To verify your image, start by downloading the proper CHECKSUM file into the same directory as the image you downloaded and follow &lt;a href="%s/%s/verify"&gt;these instructions&lt;/a&gt;.') % (path, lang))}</p>
         </div>
         <div class="col-md-3 col-xs-12">
-          <a class="btn btn-default btn-topmargin checksum" href="${path}/${lang}/verify.html">${_('Validate!')}</a>
+          <a class="btn btn-default btn-topmargin checksum" href="${path}/${lang}/verify.html">${_('Verify!')}</a>
 	</div>
     </div>
   </div>
