--- a/labs.fedoraproject.org/data/content/verify.html
+++ b/labs.fedoraproject.org/data/content/verify.html
@@ -33,10 +33,10 @@
     </div>
     <div class="row bottom-margin">
         <div class="col-sm-4 col-xs-12">
-          <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Labs-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-x86_64-CHECKSUM">${_('Validate 64-bit!')}</a>
+          <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Labs-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-x86_64-CHECKSUM">${_('Verify 64-bit!')}</a>
         </div>
         <div class="col-sm-4 col-xs-12">
-          <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Labs-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-i386-CHECKSUM">${_('Validate 32-bit!')}</a>
+          <a class="btn btn-default btn-topmargin" href="${path}/static/checksums/Fedora-Labs-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-i386-CHECKSUM">${_('Verify 32-bit!')}</a>
         </div>
     </div>
 
@@ -59,7 +59,7 @@
             <pre class="command">$ sha256sum -c *-CHECKSUM</pre>
             <p>${Markup(_('If the output states that the file is valid, then it\'s ready to use!'))}</p>
 	    <h3 class="top-margin">${_('How do I verify my downloaded image on another operating system?')}</h3>
-	    <p><a href="//docs.fedoraproject.org/f26/install-guide/install/Preparing_for_Installation.html#sect-verifying-images">${_('Read these instructions to validate your image.')}</a></p>
+	    <p><a href="//docs.fedoraproject.org/f26/install-guide/install/Preparing_for_Installation.html#sect-verifying-images">${_('Read these instructions to verify your image.')}</a></p>
         </div>
     </div>
   </div>
