--- a/getfedora.org/data/content/workstation/download/index.html
+++ b/getfedora.org/data/content/workstation/download/index.html
@@ -42,8 +42,8 @@
             </div>
             <div class="fmw-linux hidden">
               <p><a class="btn btn-success ws-download-splash" href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Workstation/x86_64/iso/Fedora-Workstation-Live-x86_64-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.iso" role="button">${_('Download')}</a></p>
-              <p>${Markup(_('64-bit %s GB ISO for &lt;strong&gt;Linux&lt;/strong&gt;.')) % global_variables.iso_size['x86_64_workstation']}
-              ${Markup(_('&lt;a href="%s"&gt;Upgrade via DNF&lt;/a&gt; if you are already on Fedora.') % ('https://fedoraproject.org/wiki/DNF_system_upgrade'))}</p>
+              <p>${Markup(_('64-bit %s GB ISO for &lt;strong&gt;Linux&lt;/strong&gt;.')) % global_variables.iso_size['x86_64_workstation']}</p>
+              <p>${Markup(_('A download is only needed for new installs. To upgrade, &lt;a href="%s"&gt;follow these instructions.&lt;/a&gt;') % ('https://docs.fedoraproject.org/quick-docs/en-US/upgrading.html'))}</p>
             </div>
             <div class="fmw-windows hidden">
               <p><a class="btn btn-success" href="https://getfedora.org/fmw/FedoraMediaWriter-win32-${global_variables.release['fmw']}.exe" role="button">${_('Download')}</a></p>
